Expand collapsed section and scroll to anchor on page load (fix #251) (#452)
Follow-up to #425.

Also simplifies the font size button markup and accessibility.

--- a/packages/aetna/assets/styles/components/_a11y.scss
+++ b/packages/aetna/assets/styles/components/_a11y.scss
@@ -16,67 +16,49 @@
 }
 
 .a11y-toolbar {
-  position: fixed;
-  z-index: 99999;
-  top: 0;
-  padding: 0 1rem;
-  width: 100vw;
   margin: 0 auto;
-  font-family: $font-family-sans-serif;
+  padding: 0 1rem;
+  position: fixed;
+  text-align: right;
+  top: 0;
+  width: 100vw;
+  z-index: 99999;
+}
 
-  .wrap {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    align-items: flex-start;
-    width: 100%;
-    max-width: 1440px;
-    margin: 0 auto;
+.a11y-fontsize {
+  background-color: var(--primary-fg);
+  border-color: var(--primary);
+  border-top: 0;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+  color: var(--primary);
+  font-size: 1rem;
+  font-weight: normal;
+  line-height: 1.5;
+  margin: 0;
+  padding: 0.25rem 0.875rem;
+  text-align: center;
+  text-transform: none;
+
+  &:focus,
+  &.focus,
+  &:hover {
+    background-color: var(--primary-fg);
+    border-color: var(--primary-dark);
+    color: var(--primary-dark);
   }
 
-  ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    font-size: 1rem;
+  &:focus,
+  &.focus {
+    box-shadow:
+      0 0 0 $btn-border-width var(--primary-fg),
+      0 0 0 (2 * $btn-border-width) var(--primary-dark);
+  }
 
-    li {
-      display: inline-block;
-      margin: 0;
-      padding: 0;
-
-      a {
-        padding: 0.25rem 0.875rem;
-        margin: 0;
-        color: var(--primary);
-        background: var(--body-bg);
-        font-size: 1rem;
-        line-height: 1.5;
-        text-align: center;
-        border-bottom: 2px solid var(--primary);
-
-        &:hover,
-        &:focus {
-          color: var(--primary-fg);
-          background: var(--primary);
-          text-decoration: none;
-        }
-      }
-
-      &:first-child {
-        a {
-          border-left: 2px solid var(--primary);
-          border-bottom-left-radius: 4px;
-        }
-      }
-
-      &:last-child {
-        a {
-          border-right: 2px solid var(--primary);
-          border-bottom-right-radius: 4px;
-        }
-      }
-    }
+  &:active,
+  &.active {
+    background-image: none;
+    @include btn-active-box-shadow();
   }
 }
 
